pkg/mytest/envoy.yaml
admin:
  #access_log_path: /tmp/admin_access.log
  access_log_path: "/dev/stdout"
  address:
   socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 127.0.0.1, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/service/1" }
                route: { cluster: some_service1 }
              - match: { prefix: "/service/2" }
                route: { cluster: some_service2 }
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
          http_filters:
          - name: envoy.router
  clusters:
  - name: some_service1
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3000
        #- endpoint:
        #    address:
        #      socket_address:
        #        address: 127.0.0.1
        #        port_value: 3001
  - name: some_service2
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_service2
      endpoints:
      - lb_endpoints:
        #- endpoint:
        #    address:
        #      socket_address:
        #        address: 127.0.0.1
        #        port_value: 3000
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3001
